CMAKE_MINIMUM_REQUIRED(VERSION 3.15 FATAL_ERROR)

add_library(sqlite3 sqlite3.c)

target_compile_definitions(sqlite3 PRIVATE 
	SQLITE_DQS=0
	SQLITE_THREADSAFE=2
	SQLITE_TEMP_STORE=2
	SQLITE_DEFAULT_FOREIGN_KEYS=1
	SQLITE_ENABLE_COLUMN_METADATA
	SQLITE_ENABLE_DBSTAT_VTAB
	SQLITE_ENABLE_EXPLAIN_COMMENTS
	SQLITE_ENABLE_FTS5
	SQLITE_ENABLE_MEMORY_MANAGEMENT
	SQLITE_ENABLE_RTREE
	SQLITE_ENABLE_STAT4
	SQLITE_ENABLE_STMTVTAB
	SQLITE_ENABLE_UPDATE_DELETE_LIMIT
	SQLITE_ENABLE_UNLOCK_NOTIFY
	SQLITE_ENABLE_BYTECODE_VTAB
	SQLITE_ENABLE_DBPAGE_VTAB
	SQLITE_ENABLE_DBSTAT_VTAB
	SQLITE_ENABLE_NORMALIZE
	SQLITE_ENABLE_NULL_TRIM
	SQLITE_ENABLE_SNAPSHOT
	SQLITE_USE_URI
	SQLITE_USE_ALLOCA
	SQLITE_OMIT_LOAD_EXTENSION
)

if (WIN32)
	target_compile_definitions(sqlite3 PRIVATE UNICODE _WINDOWS _CRT_SECURE_NO_WARNINGS _CRT_SECURE_NO_DEPRECATE)
    target_compile_options(sqlite3 PRIVATE "$<$<CONFIG:Release>:/GL>")
endif()

if (UNIX)
endif()
